BusOne01/src/objects/BOT_Specialty_Provider_JO__c.object
<CustomObject>
    <description>(BOT) It is created by BusinessOne Technologies Inc. It is a junction object between Speciality providers and Account.</description>
    <fields>
        <fullName>BOT_Account__c</fullName>
        <description>Master-detail relationship to Account.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Specialty Providers</relationshipLabel>
        <relationshipName>Specialty_Providerw</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BOT_Entity_ID__c</fullName>
        <description>To store the BOT Entity ID. It is used for BOT internal reference.</description>
        <label>Entity ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Specialty_Provider_ID__c</fullName>
        <description>To store the BOT specialty provider Id (BOT Entity Id). It is used for BOT internal reference.</description>
        <label>Specialty Provider ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BOT_Specialty_Provider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Lookup relationship to Account.</description>
        <label>Specialty Provider</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Specialty_Providerw1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BOT_Website__c</fullName>
        <description>Used to store the name of the Speciality Provider website.</description>
        <formula>BOT_Specialty_Provider__r.Website</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Website</label>
        <type>Text</type>
    </fields>
    <label>Specialty Provider JO</label>
    <nameField>
        <displayFormat>SP - {00000}</displayFormat>
        <label>Specialty Provider JO Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty Providers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>